# galion-universal-downloader

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  index.js  package-lock.json  package.json  server.js
.github/workflows/: deploy.yml
.runpod/: .key
docs/: AGENT_HANDOFF.md  GALION_ECOSYSTEM.md  TEST_MATRIX.md  V2_ROADMAP.md
docs-site/docs/: intro.md
docs-site/docs/about/: company.md
docs-site/docs/api/: overview.md
extension/: background.js  content.css  content.js  manifest.json  options.html  popup.html  popup.js
galion-v2/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
galion-v2/public/: site.webmanifest
galion-v2/src/: App.tsx  index.css  vite-env.d.ts
public/: about.html  app.js  index.html  styles.css
scripts/: health-check.js
src/: api.js  downloader.js  parser.js  scraper.js  utils.js
src/core/: AIIntelligence.js  AdaptiveScrapingEngine.js  ApiKeyManager.js  AuthManager.js  CognitiveEngine.js  EmailService.js  FileSystemScanner.js  PDFService.js  PlatformManager.js  QueueManager.js  ResumableDownloader.js  Scheduler.js  TranscriptionService.js  UniversalDownloader.js  WorkerPool.js
tests/: AutoHealer.js  GalionTestFramework.js  PlatformTestSuite.js  TestData.js  run-tests.js
tests/healing-logs/: healing-history.json  healing-instagram-1765288338650.json  healing-report-1765289239503.json  healing-tiktok-1765288341435.json  healing-youtube-1765288341435.json
tests/reports/: test-report-1765288327489.json  test-report-1765288327490.html  test-report-1765288341434.json  test-report-1765288341437.html  test-report-1765289239486.json  test-report-1765289239487.html
v3-rebuild/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
v3-rebuild/app/: __init__.py  config.py  main.py
v3-rebuild/app/api/: __init__.py  deps.py  websocket.py
v3-rebuild/app/api/routes/: __init__.py  downloads.py  files.py  health.py  keys.py  platforms.py  queue.py  transcribe.py
v3-rebuild/app/core/: __init__.py  auth_manager.py  download_engine.py  platform_router.py  queue_manager.py  worker_pool.py
v3-rebuild/app/db/: __init__.py  session.py
v3-rebuild/app/schemas/: __init__.py  common.py  download.py  platform.py
v3-rebuild/app/services/: __init__.py  transcription.py
v3-rebuild/docker/: Dockerfile  Dockerfile.gpu  docker-compose.gpu.yml  docker-compose.yml  entrypoint.sh
(+17 files in other folders)
